<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ADASLeader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_alarm">报警</string>
    <string name="action_chart">统计</string>
    <string name="action_DVR">操作</string>
    <string name="action_night_view">夜视</string>
    <string name="action_debug_view">调试</string>
    <string name="action_settings">设置</string>
    <string name="action_exit">退    出</string>
    <string name="action_about">关于</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="action_search">Search</string>
    <string name="action_cloud">Cloud</string>
    <string name="action_accept">Accept</string>
    <string name="action_call">Call</string>
    <string name="action_email">Email</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_night_view">NightViewActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_hw_ticks">跟车距离预警</string>
    <string name="settings_volume">报警音量</string>
    <string name="settings_VB">虚拟保险杠灵敏度</string>
    <string name="settings_LDW">车道偏离预警</string>
    <string name="settings_LDW_speed">偏离预警启用速度</string>
    <string name="settings_warning">为了您的安全，请在停车时进行设置</string>
    <string name="settings_next_acc_on">设置将在下次点火后生效</string>
    <string name="settings_new_app_upgrade">有应用更新</string>
    <string name="settings_new_firmware_upgrade">有固件更新</string>
    <string name="settings_check_upgrade">检查更新</string>
    <string name="connection_can">已连接到设备</string>
    <string name="connection_wifi">未连接到设备。请连接到ADASLeader。点击设置>></string>
    <string name="connection_no">未连接到设备。请打开Wifi并连接到ADASLeader。点击设置>></string>
    <string name="send_ok">发送成功</string>
    <string name="send_error">发送错误</string>
    <string name="socket_null">IP地址为空</string>
    <string name="toast_twice_press_back_to_exit">再按一次退出应用</string>
    <string name="title_activity_about">关于</string>

    <string name="checking_upgrade">正在检查更新......</string>
    <string name="no_upgrade">当前已是最新版本</string>
    <string name="find_upgrade">找到新的版本</string>
    <string name="download_upgrade">下载更新</string>
    <string name="click_to_download">点击下载</string>
    <string name="click_to_upgrade">点击更新固件</string>
    <string name="connect_can_to_upgrade">已下载，请连接设备进行更新</string>
    <string name="device_info_differ">设备版本不一致，请重新下载</string>
    <string name="upload_firmware_complete">更新固件完毕，准备重启设备......</string>
    <string name="upload_firmware_fail">更新固件失败</string>
    <string name="firmware_not_exist">找不到固件文件</string>
    <string name="upload_title">更新设备固件</string>
    <string name="uploading_firmware">正在更新固件......</string>
    <string name="waiting_device_restart">设备正在重启，约需18秒，请稍侯......</string>
    <string name="restart_complete">设备重启完成。</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="close">关闭</string>
    <string name="downloading_upgrade">正在下载更新......</string>
    <string name="test_mode">测试模式开启</string>
    <string name="cant_open_test">无法开启测试模式</string>

    <string name="download_ok">下载完成</string>
    <string name="download_fail">下载失败</string>
    <string name="settings_apply">&#160;&#160;&#160;&#160;设置已修改，需重启设备才能生效。整个过程需要20秒，是否立即重启设备？</string>
    <string name="settings_writing_config">正在更新设置......</string>
    <string name="settings_prepare_reset">设置更新完毕，准备重启......</string>
    <string name="title_activity_dvr">DVRActivity</string>


    <string name="dvr_home">主页</string>
    <string name="dvr_confirm">确定</string>
    <string name="dvr_cancel">返回</string>
    <string name="dvr_up">上</string>
    <string name="dvr_down">下</string>
    <string name="dvr_photo">拍照</string>
    <string name="dvr_record">录像</string>
    <string name="dvr_video_list">视频列表</string>
    <string name="dvr_fcw_video_list">紧急视频</string>
    <string name="dvr_pic_list">照片列表</string>
    <string name="dvr_format">格式化</string>
    <string name="dvr_not_allow_play">行驶中不允许播放</string>

    <string name="screen_car">原车屏</string>
    <string name="screen_mobileye">天眼</string>
    <string name="screen_dvr">记录仪</string>
    <string name="screen_video">0x83</string>
    <string name="write_mcu">MCU</string>
    <string name="write_hi3">HI3</string>
    <string name="write_pic">PIC</string>
    <string name="play_video">播放</string>
    <string name="stop_video">停止</string>

    <string name="FCW">FCW</string>
    <string name="LDW">LDW</string>
    <string name="PCW">PCW</string>
    <string name="Speeding">超速</string>
    <string name="HMW">HMW</string>
    <string name="Total">合计</string>

    <string name="dvr_format_alert">即将格式化TF卡！卡上所有的内容都将删除！</string>
    <string name="dvr_format_title">格式化TF卡</string>


    <string name="statement_title">特别提示</string>
    <string name="statement_content1">1、车辆驾驶员始终是车辆安全驾驶的第一责任人，驾驶员应当遵守与道路交通管理、驾驶员和驾驶行为管理相关的所有国家法律、法规、规章及其它规范性文件，安全驾驶。</string>
    <string name="statement_content2">2、本产品(事故规避智能预警系统)并非在任何条件下都能正常工作，产品的设计目标仅为实现驾驶辅助设备功能，产品及系统并不能完全避免交通事故的发生，产品及其研发生产商不对安装有本产品及系统的车辆所发生的任何交通事故或交通违章承担任何责任。</string>
    <string name="statement_content3">3、本系统不能代替驾驶员观察路况。驾驶员在驾驶过程中应始终保持警觉，并依据自己观察或听到的路况进行驾驶。</string>
    <string name="statement_content4">4、本系统在探测车辆、行人、车道或针对潜在的道路交通伤害发出警告时不能保证百分之百的准确性。此外，路面、天气及其他情况会对本系统的识别与反应能力有一定的影响。遮挡摄像机部分或全部视野均可导致本系统功能失效或性能降低，请务必保持摄像机视野清晰。</string>
    <string name="statement_content5">5、驾驶员始终负有保持适当车距和车速的责任，切勿等待发出碰撞警告后，驾驶员才采取相应紧急措施。驾驶员应始终对确保车辆安全驾驶承担最终责任。</string>
    <string name="statement_content6">安全驾驶，请遵守交通规则。</string>
    <string name="statement_ok">了解</string>
    <string name="WarnRecordsFileName">Warn%s.bin</string>
</resources>
