<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_email"
        android:icon="@drawable/ic_action_email"
        android:title="@string/action_email"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_cloud"
        android:icon="@drawable/ic_action_cloud"
        android:title="@string/action_cloud"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_accept"
        android:icon="@drawable/ic_action_accept"
        android:title="@string/action_accept"
        app:showAsAction="ifRoom"     />
    <item android:id="@+id/action_call"
        android:icon="@drawable/ic_action_call"
        android:title="@string/action_call"
        app:showAsAction="ifRoom"/>
</menu>
