<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hk.com.mobileye.jason.adlaleader.DVRControlFragment">


    <Button
        android:id="@+id/btnDVRHome"
        android:layout_width="@dimen/dvr_button_size"
        android:layout_height="@dimen/dvr_button_size"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnDVRDown"
        android:text="@string/dvr_home"
        android:contentDescription="@string/dvr_home"
        android:src="@drawable/ic_action_web_site" />

    <Button
        android:id="@+id/btnDVRConfirm"
        android:layout_width="@dimen/dvr_button_size"
        android:layout_height="@dimen/dvr_button_size"
        android:layout_alignTop="@id/btnDVRHome"
        android:layout_toEndOf="@id/btnDVRHome"
        android:layout_toRightOf="@id/btnDVRHome"
        android:text="@string/dvr_confirm"
        android:contentDescription="@string/dvr_confirm"
        android:src="@drawable/ic_action_forward" />

    <Button
        android:id="@+id/btnDVRCancel"
        android:layout_width="@dimen/dvr_button_size"
        android:layout_height="@dimen/dvr_button_size"
        android:layout_alignTop="@id/btnDVRHome"
        android:layout_toLeftOf="@id/btnDVRHome"
        android:layout_toStartOf="@id/btnDVRHome"
        android:text="@string/dvr_cancel"
        android:contentDescription="@string/dvr_cancel"
        android:src="@drawable/ic_action_undo" />

    <Button
        android:id="@+id/btnDVRUp"
        android:layout_width="@dimen/dvr_button_size"
        android:layout_height="@dimen/dvr_button_size"
        android:text="@string/dvr_up"
        android:layout_above="@id/btnDVRHome"
        android:layout_alignLeft="@id/btnDVRHome"
        android:layout_alignStart="@id/btnDVRHome"
        android:contentDescription="@string/dvr_up"
        android:src="@drawable/ic_action_collapse" />

    <Button
        android:id="@+id/btnDVRDown"
        android:layout_width="@dimen/dvr_button_size"
        android:layout_height="@dimen/dvr_button_size"
        android:text="@string/dvr_down"
        android:layout_alignLeft="@id/btnDVRHome"
        android:layout_alignStart="@id/btnDVRHome"
        android:layout_above="@+id/btnScrMobileye"
        android:contentDescription="@string/dvr_down"
        android:src="@drawable/ic_action_expand" />

    <Button
        android:id="@+id/btnDVRPhoto"
        android:layout_width="@dimen/dvr_button_size"
        android:layout_height="@dimen/dvr_button_size"
        android:text="@string/dvr_photo"
        android:contentDescription="@string/dvr_photo"
        android:layout_alignTop="@id/btnDVRDown"
        android:layout_toRightOf="@id/btnDVRDown"
        android:layout_toEndOf="@id/btnDVRDown"/>


    <Button
        android:id="@+id/btnScrCar"
        android:layout_width="90dp"
        android:layout_height="@dimen/dvr_button_size"
        android:text="@string/screen_car"
        android:contentDescription="@string/screen_car"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/btnScrMobileye"
        android:layout_width="90dp"
        android:layout_height="@dimen/dvr_button_size"
        android:text="@string/screen_mobileye"
        android:contentDescription="@string/screen_mobileye"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/btnScrCar"
        android:layout_toEndOf="@id/btnScrCar"/>
    <Button
        android:id="@+id/btnScrDVR"
        android:layout_width="90dp"
        android:layout_height="@dimen/dvr_button_size"
        android:text="@string/screen_dvr"
        android:contentDescription="@string/screen_dvr"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/btnScrMobileye"
        android:layout_toEndOf="@id/btnScrMobileye"/>

    <Button
        android:id="@+id/btnScrVideo"
        android:layout_width="90dp"
        android:layout_height="@dimen/dvr_button_size"
        android:text="@string/screen_video"
        android:contentDescription="@string/screen_video"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/btnScrDVR"
        android:layout_toEndOf="@id/btnScrDVR"/>

    <Button
        android:id="@+id/btnPlayVideo"
        android:layout_width="@dimen/dvr_button_size"
        android:layout_height="@dimen/dvr_button_size"
        android:text="@string/play_video"
        android:contentDescription="@string/play_video"
        android:layout_alignTop="@+id/btnDVRUp"/>


</RelativeLayout>
