<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hk.com.mobileye.jason.adlaleader.ChartActivity">

    <FrameLayout
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0">

        <CheckBox
            android:id="@+id/btnFCW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FCW"
            android:textSize="12dp"
            android:contentDescription="@string/FCW"
            android:checked="true"
            android:onClick="onBtnStatClicked"/>
        <CheckBox
            android:id="@+id/btnLDW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/LDW"
            android:textSize="12dp"
            android:contentDescription="@string/LDW"
            android:checked="true"
            android:onClick="onBtnStatClicked"/>
        <CheckBox
            android:id="@+id/btnPCW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PCW"
            android:textSize="12dp"
            android:contentDescription="@string/PCW"
            android:checked="true"
            android:onClick="onBtnStatClicked"/>
        <CheckBox
            android:id="@+id/btnSpeeding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Speeding"
            android:textSize="12dp"
            android:contentDescription="@string/Speeding"
            android:checked="true"
            android:onClick="onBtnStatClicked"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Total"
            android:textSize="12dp"
            android:contentDescription="@string/Total"
            android:checked="true"
            android:onClick="onBtnStatClicked"/>

    </LinearLayout>
</LinearLayout>
