<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff00FF00"
    tools:context=".MainActivity">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffff0000"
        android:id="@android:id/tabhost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ff0000ff"
            android:orientation="vertical">


            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">
            </FrameLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/main_btn_style"
                    android:text="@string/action_alarm"
                    android:drawableTop="@drawable/ic_action_alarm"
                    android:id="@+id/rbtnAlarm" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/main_btn_style"
                    android:text="@string/action_night_view"
                    android:drawableTop="@drawable/ic_action_ctrl"
                    android:id="@+id/rbtnNightView" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/main_btn_style"
                    android:text="@string/action_settings"
                    android:drawableTop="@drawable/ic_action_settings"
                    android:id="@+id/rbtnSettings" />
            </RadioGroup>
        </LinearLayout>
    </TabHost>
</RelativeLayout>
